Fix ace z-index bug

--- a/client/src/stylesheets/sass/_card.sass
+++ b/client/src/stylesheets/sass/_card.sass
@@ -1,6 +1,6 @@
 .card
   position: fixed
-  z-index: 2
+  z-index: 12
   top: $topBarHeight * 2
   left: 50%
   height: 480px
