--- a/client/src/stylesheets/sass/main.sass
+++ b/client/src/stylesheets/sass/main.sass
@@ -114,6 +114,7 @@ body
 
 .backdrop
   position: fixed
+  z-index: 10
   top: 0
   left: 0
   height: 100%
